// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches ListGroupItem warning 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #856404;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem warning action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #856404;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #856404;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #f3da8d;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

<li
  action={true}
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem warning active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #f3da8d;
  border-color: rgba(0,0,0,0.2);
  background-color: #856404;
  border-color: #856404;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #856404;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #856404;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;
